updating my details

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am learning to be a software developer</p>
       <h1>Where I'm From</h1>
-      <p>I am from Ukraine, live in Houston, TX since 2007</p>
+      <p>I am from Kyiv, Ukraine</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Painting, reading, cooking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Become a behavioral neuroscientist and write code for AI</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Houston, TX since 2007</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Learn new skills and be able to be flexible with my career </p>
     </section>
 
     <footer id="footer">
